# la-patate-chaude

./: Cargo.toml
src/: client.rs  md5.rs
src/chall/: base.rs  md5_challenge.rs  mod.rs
src/challenge2/: md5Challenge.rs  mod.rs
src/structs/: challenge.rs  connection.rs  game.rs  md5.rs  message.rs  mod.rs
